--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
 version: '3'
+
 services:
-  nodejs-server:
+
+  node-api:
     build:
       context: ./server
     ports:
-      - "3080:3080"
-    container_name: node-api
+      - "3001:3001"
     volumes:
-       - ./server:/usr/src/app/api
-       - /usr/src/app/api/node_modules
-  react-ui:
+       - ./server:/usr/app
+       - /usr/app/node_modules
+
+  react-client:
     build:
-      context: ./react-ui
+      context: ./react-client
     ports:
-      - "3000:3000"
-    container_name: react-ui
+      - "5173:5173"
     stdin_open: true
     volumes:
-       - ./react-ui:/usr/src/app/react-ui
-       - /usr/src/app/react-ui/node_modules
+       - ./react-client:/usr/app
+       - /usr/app/node_modules
