--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "name": "node-api",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "preinstall": "npm i nodemon -g",
-    "dev": "nodemon ./index.js localhost 3080",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/main.ts -w src/",
+    "start": "NODE_ENV=production ts-node src/main.ts",
+    "build": "vite build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "webpack": "^5.84.1"
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20"
   }
 }
